fix Hn tags for SEO

--- a/client-jss/src/app/main/components/footer/footer.component.html
+++ b/client-jss/src/app/main/components/footer/footer.component.html
@@ -7,7 +7,7 @@ Footer START -->
       <div class="row pt-5">
         <!-- Footer Widget -->
         <div class="col-md-6 col-lg-2 mb-4">
-          <h5 class="mb-4">Actualités</h5>
+          <p class="h5 mb-4">Actualités</p>
           <div class="row">
             <div class="col-12">
               <ul class="nav flex-column text-primary-hover">
@@ -19,7 +19,7 @@ Footer START -->
           </div>
         </div>
         <div class="col-md-6 col-lg-2 mb-4">
-          <h5 class="mb-4">En Île-de-France</h5>
+          <p class="h5 mb-4">En Île-de-France</p>
           <div class="row">
             <div class="col-12">
               <ul class="nav flex-column text-primary-hover">
@@ -31,7 +31,7 @@ Footer START -->
           </div>
         </div>
         <div class="col-md-6 col-lg-2 mb-4">
-          <h5 class="mb-4">Journal</h5>
+          <p class="h5 mb-4">Journal</p>
           <div class="row">
             <div class="col-12">
               <ul class="nav flex-column text-primary-hover">
@@ -49,7 +49,7 @@ Footer START -->
           </div>
         </div>
         <div class="col-md-6 col-lg-2 mb-4">
-          <h5 class="mb-4">Nos services</h5>
+          <p class="h5 mb-4">Nos services</p>
           <div class="row">
             <div class="col-12">
               <ul class="nav flex-column text-primary-hover">
@@ -72,7 +72,7 @@ Footer START -->
           </div>
         </div>
         <div class="col-md-6 col-lg-2 mb-4">
-          <h5 class="mb-4">Le JSS</h5>
+          <p class="h5 mb-4">Le JSS</p>
           <div class="row">
             <div class="col-12">
               <ul class="nav flex-column text-primary-hover">
@@ -118,8 +118,8 @@ Footer START -->
               </a>
             </li>
           </ul>
-          <h5 class="mb-4"><a class="nav-link pt-0" style="cursor: pointer;" routerLink="/contact">Contact</a>
-          </h5>
+          <p class="h5 mb-4"><a class="nav-link pt-0" style="cursor: pointer;" routerLink="/contact">Contact</a>
+          </p>
         </div>
       </div>
       <!-- Widgets END -->
