--- a/client-jss/src/app/main/components/podcasts/podcasts.component.html
+++ b/client-jss/src/app/main/components/podcasts/podcasts.component.html
@@ -75,10 +75,10 @@
                           <div class="d-flex flex-wrap gap-1">
                           </div>
                         </div>
-                        <h4 class="card-text-truncate pb-2"> <img *ngIf="post.isPremium" class="pe-0"
+                        <p class="h4 card-text-truncate pb-2"> <img *ngIf="post.isPremium" class="pe-0"
                             src="/assets/images/premium-icon.svg">
                           {{post.titleText}}
-                        </h4>
+                        </p>
                         <span [innerHTML]="post.excerptText| trustHtml"></span>
                       </div>
                     </div>
@@ -138,7 +138,7 @@
                   <div class="row">
                     <div class="col-md-12">
                       <div class="section-title-block d-flex ">
-                        <h3 class="text-white">Au cœur de l'actualité !</h3>
+                        <span class="h3 text-white">Au cœur de l'actualité !</span>
                       </div>
                     </div>
                   </div>
