--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -69,7 +69,7 @@
                     (click)="togglePlayPause(post!)"><i
                       [ngClass]="getIsPlaying(post!) ? 'bi-pause-fill' : 'bi-play-fill'"></i></a>
                   <div class="col">
-                    <h6 class="mb-0 fs-7">Écouter l'article</h6>
+                    <p class="h6 mb-0 fs-7">Écouter l'article</p>
                   </div>
                 </div>
                 <!-- Player END -->
