--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -148,9 +148,9 @@
                 <span class="fs-xs opacity-20 mx-3">|</span>
                 <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]">{{post.postTags[0].name}}</a>
               </div>
-              <h3 class="h4 card-title card-title-truncate">
+              <span class="h4 card-title card-title-truncate">
                 <a [routerLink]="'/post/'+post.slug">{{post.titleText}}</a>
-              </h3>
+              </span>
               <p class="card-text card-text-truncate">{{post.excerptText}}</p>
             </div>
             <div class="card-footer pt-3">
@@ -158,7 +158,7 @@
                 <img class="rounded-circle"
                   [src]="post.fullAuthor.avatar_url_size_48 ? post.fullAuthor.avatar_url_size_48 : post.fullAuthor.avatar_url_size_24 ? post.fullAuthor.avatar_url_size_24 : post.fullAuthor.avatar_url_size_96 "
                   width="48" alt="Post author">
-                <h6 class="ps-3 mb-0">{{post.fullAuthor.name}}</h6>
+                <span class="h6 ps-3 mb-0">{{post.fullAuthor.name}}</span>
               </div>
             </div>
           </div>
@@ -181,7 +181,7 @@
             <div class="d-flex align-items-center text-decoration-none pb-2">
               <img class="rounded-circle" src="assets/img/testimonial/Photo_LA.jpg" width="48" alt="testimonial">
               <div class="row ps-3 pt-3">
-                <h6 class=" mb-0">Luc Athlan</h6>
+                <span class="h6 mb-0">Luc Athlan</span>
                 <p>Responsable droit des sociétés</p>
               </div>
             </div>
@@ -203,7 +203,7 @@
             <div class="d-flex align-items-center text-decoration-none pb-2">
               <img class="rounded-circle" src="assets/img/testimonial/Photo_NB.jpg" width="48" alt="testimonial">
               <div class="row ps-3 pt-3">
-                <h6 class=" mb-0">Nathan Bonnet</h6>
+                <span class="h6 mb-0">Nathan Bonnet</span>
                 <p>Juriste en entreprise</p>
               </div>
             </div>
@@ -221,7 +221,7 @@
             <div class="d-flex align-items-center text-decoration-none pb-2">
               <img class="rounded-circle" src="assets/img/testimonial/Photo_SG.jpg" width="48" alt="testimonial">
               <div class="row ps-3 pt-3">
-                <h6 class=" mb-0">Sébastien Gomez</h6>
+                <span class="h6 mb-0">Sébastien Gomez</span>
                 <p>Expert-comptable</p>
               </div>
             </div>
@@ -243,7 +243,7 @@
             <div class="d-flex align-items-center text-decoration-none pb-2">
               <img class="rounded-circle" src="assets/img/testimonial/Photo_IK.jpg" width="48" alt="testimonial">
               <div class="row ps-3 pt-3">
-                <h6 class=" mb-0">Isabelle de Kerviler</h6>
+                <span class="h6 mb-0">Isabelle de Kerviler</span>
                 <p>Expert-comptable</p>
               </div>
             </div>
@@ -261,7 +261,7 @@
             <div class="d-flex align-items-center text-decoration-none pb-2">
               <img class="rounded-circle" src="assets/img/testimonial/Photo_PL.jpg" width="48" alt="testimonial">
               <div class="row ps-3 pt-3">
-                <h6 class=" mb-0">Perrine Latour</h6>
+                <span class="h6 mb-0">Perrine Latour</span>
                 <p>Chef d'entreprise</p>
               </div>
             </div>
@@ -277,7 +277,7 @@
             <div class="d-flex align-items-center text-decoration-none pb-2">
               <img class="rounded-circle" src="assets/img/testimonial/Photo_SR.jpg" width="48" alt="testimonial">
               <div class="row ps-3 pt-3">
-                <h6 class=" mb-0">Stanislas Roquebert</h6>
+                <span class="h6 mb-0">Stanislas Roquebert</span>
                 <p>Avocat à la Cour</p>
               </div>
             </div>
