--- a/client-myjss/src/app/modules/tools/components/tools/tools.component.html
+++ b/client-myjss/src/app/modules/tools/components/tools/tools.component.html
@@ -2,7 +2,7 @@
   <nav aria-label="breadcrumb">
     <ol class="pt-lg-5 pb-lg-4 pb-2 breadcrumb">
       <li class="breadcrumb-item"><a routerLink="/">Accueil</a></li>
-      <li class="breadcrumb-item"><a routerLink="/tools/practical-sheets">Outils</a></li>
+      <li class="breadcrumb-item"><a>Outils</a></li>
       <li class="breadcrumb-item">
         <span *ngIf="selectedTab">{{ selectedTab.label }}</span>
       </li>
