fix bugs display posts doublons carousel + fix SEO hiden url and using <a> instead of button

--- a/client-jss/src/app/main/components/announcement/announcement.component.html
+++ b/client-jss/src/app/main/components/announcement/announcement.component.html
@@ -11,9 +11,9 @@
             </div>
           </div>
           <div>
-            <button class="btn gray-color mt-2" (click)="goBack()">
+            <a routerLink="/announcement/search" class="btn gray-color mt-2">
               <i class="bi bi-arrow-left gray-color"></i>Retour
-            </button>
+            </a>
           </div>
           <section class="position-relative mt-2">
             <div class="row">
