--- a/client-jss/src/app/main/components/podcasts/podcasts.component.html
+++ b/client-jss/src/app/main/components/podcasts/podcasts.component.html
@@ -100,9 +100,9 @@
                     </div>
                   </div>
                   <ul class="tag-cloud list-inline">
-                    <li *ngFor="let tag of tagsByEntityType.slice(0,8)" class="list-inline-item pb-1"><a
+                    <li *ngFor="let tag of tagsByEntityType.slice(0,8)" class="list-inline-item pb-1"><button
                         class="btn bg-light text-secondary bg-hover-danger text-hover-white bg-hover-secondary fs-8"
-                        [routerLink]='"/post/tag/" + tag.slug'>{{tag.name}}</a>
+                        [routerLink]='"/post/tag/" + tag.slug'>{{tag.name}}</button>
                     </li>
                   </ul>
                 </div>
