--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.css
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.css
@@ -121,3 +121,15 @@
 .custom-input-group ::ng-deep .form-control {
   color: var(--ar-blue-dark-bg) !important;
 }
+
+.seo-fallback {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
