--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -20478,6 +20478,8 @@ ng-autocomplete .autocomplete-container b {
   border: solid 2px var(--ar-secondary);
   box-shadow: 5px 5px 10px #1c2d418a;
   margin: -10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   background-color: var(--ar-primary);
   z-index: 30;
   position: relative;
