fix method openmyjssroute for kiosk

--- a/client-jss/src/app/main/components/kiosk/kiosk.component.html
+++ b/client-jss/src/app/main/components/kiosk/kiosk.component.html
@@ -46,7 +46,7 @@
               <div class="col-auto">
                 <button type="button"
                   class="btn btn-secondary rounded-circle btn-circle-md fs-4 border-0 d-inline-flex align-items-center justify-content-center"
-                  (click)="buyNewspaper(newspaper.id)">
+                  (click)="buyNewspaper(newspaper.id, $event)">
                   <i class="bi-cart"></i>
                 </button>
               </div>
