--- a/src/main/resources/mails/templates/send-contact-request.html
+++ b/src/main/resources/mails/templates/send-contact-request.html
@@ -126,8 +126,8 @@
                                                                 <p>Bonjour,</p>
                                                                 <p>Nous avons reçu une demande de client.
                                                                     Ci-dessous le contact client et son message : </p>
-                                                                <br><span th:text="${explaination}"></span>
-                                                                <br>
+                                                                <br /><span th:text="${explaination}"></span>
+                                                                <br />
                                                                 <p>. Merci de prendre contact avec ce dernier.
                                                                 </p>
                                                             </td>
