added cookie consent management+fix audit

--- a/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.html
+++ b/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.html
@@ -573,8 +573,18 @@
                   <td>Conservation des propriétés de navigation de l'utilisateur</td>
                   <td>30 minutes</td>
                 </tr>
+                <tr>
+                  <th scope="row">cookie_consent</th>
+                  <td>Consentement de l'utilisateur pour l'utilisation des cookies</td>
+                  <td>365 jours</td>
+                </tr>
               </tbody>
             </table>
+          </div>
+
+          <div>
+            Vous pouvez réinitialiser vos préférences de cookies en cliquant <a href="javascript:void(0)"
+              (click)="resetCookies()">ici</a>
           </div>
 
         </div>
