fix template adress for registration-act

--- a/src/main/resources/mails/templates/registration-act.html
+++ b/src/main/resources/mails/templates/registration-act.html
@@ -75,21 +75,21 @@
     <div class="centered">
         <div class="info-box">
             <strong>JOURNAL SPÉCIAL DES SOCIÉTÉS</strong><br></br>
-            8, rue St Augustin - 75080 PARIS Cedex 02<br></br>
+            10, boulevard Haussmann - CS 41009 - 75441 Paris Cedex 09<br></br>
             Tél: 0147031010 - Fax: 0147039955
         </div>
     </div>
     <div style="height: 10px;"></div>
     <div>
-        <div class="gray-box">BUREAU D’ENREGISTREMENT DE : SIE<br></br>ENVOI DU</div>
-        <div class="gray-box">DENOMINATION</div>
-        <div class="gray-box">AFFAIRE SUIVI PAR DOSSIR N°:</div>
-        <div class="gray-box">RESPONSABLE</div>
-        <div class="gray-box">N° DE CHEQUE:</div>
-        <div class="gray-box">VIREMENT</div>
-        <div class="gray-box">DATE</div>
-        <div class="gray-box">MONTANT</div>
-        <div class="relative-text">achat du Bureau d'Enregistrement:</div>
+        <div class="gray-box">BUREAU D’ENREGISTREMENT DE : <br></br>ENVOI DU : </div>
+        <div class="gray-box">DENOMINATION :</div>
+        <div class="gray-box">AFFAIRE SUIVI PAR DOSSIER N°:</div>
+        <div class="gray-box">RESPONSABLE :</div>
+        <div class="gray-box">N° DE CHEQUE :</div>
+        <div class="gray-box">VIREMENT :</div>
+        <div class="gray-box">DATE :</div>
+        <div class="gray-box">MONTANT :</div>
+        <div class="relative-text">cachet du Bureau d'Enregistrement :</div>
     </div>
 </body>
 
