--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -48,8 +48,8 @@
             <p class="mb-0">Toutes les annonces légales, sur tout le territoire et sur tous les supports.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle"
-              (clic)="openRoute('/services/announcement')" aria-label="Learn more">
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/announcement"
+              aria-label="Annonces légales">
               <i class="ai-arrow-right"></i>
             </a>
           </div>
@@ -59,12 +59,12 @@
         <div class="card h-100 border-0 rounded-5 w-100">
           <div class="card-body pb-3 px-3">
             <img src="assets/img/icons/Formalite.svg" alt="Icon">
-            <h3 class="h4 text-white" routerLink="/services/formalite" style="cursor: pointer;">Formalités légales</h3>
+            <h3 class="h4 text-white" routerLink="/services/formality" style="cursor: pointer;">Formalités légales</h3>
             <p class="mb-0">Un accompagnement complet pour toutes vos formalités juridiques.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (clic)="openRoute('/services/formalite')"
-              aria-label="Learn more">
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/formality"
+              aria-label="Fomalites">
               <i class="ai-arrow-right"></i>
             </a>
           </div>
@@ -81,8 +81,8 @@
               l’international.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (clic)="openRoute('/services/apostille')"
-              aria-label="Learn more">
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/apostille"
+              aria-label="Apostilles">
               <i class="ai-arrow-right"></i>
             </a>
           </div>
@@ -98,8 +98,8 @@
             <p class="mb-0">Une domiciliation au cœur de Paris avec gestion simplifiée.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle"
-              (clic)="openRoute('/services/domiciliation')" aria-label="Learn more">
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/domiciliation"
+              aria-label="Domiciliation">
               <i class="ai-arrow-right"></i>
             </a>
           </div>
@@ -114,8 +114,8 @@
             <p class="mb-0">Vos documents officiels fournis rapidement et en toute conformité.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (clic)="openRoute('/services/document')"
-              aria-label="Learn more">
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/document"
+              aria-label="Documents">
               <i class="ai-arrow-right"></i>
             </a>
           </div>
