requiring attention filter finished on orders and quotations

--- a/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
+++ b/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
@@ -62,7 +62,7 @@
           <hr class="dropdown-divider">
         </label>
         <label class=" dropdown-item">
-          <input class="form-check-input me-2" type="checkbox" value="" [(ngModel)]="withMissingAttachment"
+          <input class="form-check-input me-2" type="checkbox" value="" [(ngModel)]="requiringAttention"
             (change)="changeFilter()">
           Qui requiert mon attention
         </label>
