changed CTA link+maj CGV small duplication of lines deteleted+cleanup code

--- a/src/main/resources/mails/templates/quotation-page.html
+++ b/src/main/resources/mails/templates/quotation-page.html
@@ -369,10 +369,7 @@
                     acompte sera réclamé au moment de la commande. Cet acompte sera déduit de la facture. Un solde
                     créditeur
                     sera alors remboursé par virement ou un solde débiteur sera à régler dans un délai de 30 jours.
-                    Les chèques ne sont plus admis.
-                    Tout règlement par virement ou CB depuis l’étranger générant des frais bancaires à notre
-                    encontre, entraînera une facturation complémentaire pour frais d’encaissement.
-                    Les frais d’oppositions sur chèques perdus sont à la charge du client ou de l’affaire. .</p>
+                    Les chèques ne sont plus admis.</p>
                 <p>
                     Tout règlement par virement ou CB depuis l’étranger générant des frais bancaires à notre
                     encontre, entraînera une facturation complémentaire pour frais d’encaissement.</p>
