save devs in progress chat osiris v2 and myjss

--- a/client-osiris/src/app/modules/quotation/components/customer-order/customer-order.component.html
+++ b/client-osiris/src/app/modules/quotation/components/customer-order/customer-order.component.html
@@ -1,3 +1,4 @@
 <p>
   customer-order works!
 </p>
+<customer-order-chat *ngIf="customerOrder" [customerOrder]="customerOrder"></customer-order-chat>
