chat working as a v1

--- a/client-myjss/src/app/modules/my-account/components/customer-order-chat/customer-order-chat.component.html
+++ b/client-myjss/src/app/modules/my-account/components/customer-order-chat/customer-order-chat.component.html
@@ -10,7 +10,7 @@
 
     <div class="messages-list">
       <div *ngFor="let comment of comments" class="message-item"
-        [ngClass]="{'sent': comment.employee !== null, 'received': comment.employee === null}">
+        [ngClass]="{'sent': comment.employee === null, 'received': comment.employee !== null}">
         {{ comment.comment }}
       </div>
     </div>
