--- a/client-osiris/src/app/modules/main/components/customer-order-chat/customer-order-chat.component.html
+++ b/client-osiris/src/app/modules/main/components/customer-order-chat/customer-order-chat.component.html
@@ -7,8 +7,8 @@
     </div>
 
     <div class="messages-list">
-      <div *ngFor="let comment of comments" class="message-item"
-        [ngClass]="{'sent': comment.employee !== null, 'received': comment.employee === null}">
+      <div *ngFor="let comment of comments; let i = index" class="message-item" id="{{ 'comment-' + i }}"
+        [ngClass]="{'sent':  comment.employee && comment.employee.id, 'received': !comment.employee || !comment.employee.id}">
         {{ comment.comment }}
       </div>
     </div>
